# intelligent-search-ranking

./: .gitignore  .markdownlint.json  DataContracts.md  Dockerfile  Intelligent Search & Ranking System.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
deployment/aws/: docker-compose.yml
docs/: Evaluation.md  SystemDesign.md
evaluation/: ndcg.py
src/: config.py
src/api/: main.py  models.py  routes.py
src/ranking/: feature_extractor.py  ranker.py  train.py
src/reranking/: cross_encoder_reranker.py
src/retrieval/: bm25_retriever.py  data_loader.py  hybrid_retriever.py  semantic_retriever.py
tests/api/: test_search.py
tests/ranking/: test_features.py  test_ndcg.py
tests/retrieval/: test_retrieval.py
